syntax = "proto3";

import "google/protobuf/field_mask.proto";
import "google/api/annotations.proto";

option go_package = "github.com/robertfluxus/faceit-task";

package user;

service UserService {
    rpc CreateUser(CreateUserRequest) returns (User) {
        option (google.api.http) = {
            post: "/v1/user"
            body: "*"
        };
    };
    rpc ListUsers(ListUsersRequest) returns (ListUsersResponse) {
        option (google.api.http) = {
            get: "/v1/user"
        };
    };
    rpc UpdateUser(UpdateUserRequest) returns (User) {
        option (google.api.http) = {
            put: "/v1/user/{user.id}"
            body: "*"
        };
    };
    rpc GetUser(GetUserRequest) returns (User) {
        option (google.api.http) = {
            get: "/v1/user/{user_id}"
        };
    };
}

message User {
    string id = 1;
    string first_name = 2;
    string last_name = 3;
    string nickname = 4;
    string password = 5;
    string email = 6;
    string country = 7;
}

message CreateUserRequest {
    string request_id = 1;
    User user = 2;
}

message ListUsersRequest {
    repeated string countries = 1;
    uint32 page_size = 2;
    string next_page_token = 3;
}

message ListUsersResponse {
    repeated User users = 1;
}

message UpdateUserRequest {
    string request_id = 1;
    User user = 2;
    google.protobuf.FieldMask update_mask = 3;
}

message GetUserRequest {
    string user_id = 1;
}

